atualizacao do portfolio

--- a/index.html
+++ b/index.html
@@ -167,22 +167,22 @@
             <h2>PROJETOS 🏗️ </h2>
         </div>
 
-        <div class="wrapper-projects">
+        <div class="wrapper-projects">  
 
             <div class="card-project">
                 <div class="content-project">
                     <div class="image-project">
                         <a href="/">
-                            <img src="img/embreve.jpg" alt="img-embreve">
+                            <img src="/img/câmbio.webp" alt="Conversor de Moedas">
                         </a>
                     </div>
 
-                    <span>Em breve, novo projeto!</span>
+                    <span>Conversor de Moedas!</span>
 
-                    <p>Este projeto ainda não está pronto.</p>
+                    <p>Conversor de Real, Dolar, Libra, Euro e BTC</p>
 
                     <div class="cta-project">
-                        <a href="/">
+                        <a href="https://github.com/MatheusDarlyson/Conversor_Moedas">
                             Código
                             <i class="fa-brands fa-github"></i>
                         </a>
@@ -193,7 +193,7 @@
                     </div>
                 </div>
             </div>
-        
+               
             <div class="card-project">
                 <div class="content-project">
                     <div class="image-project">
