--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             Código
                             <i class="fa-brands fa-github"></i>
                         </a>
-                        <a href="/">
+                        <a href="https://coinchanger.netlify.app/">
                             Site
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
