--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="card-project">
                 <div class="content-project">
                     <div class="image-project">
-                        <a href="/">
+                        <a href="https://coinchanger.netlify.app/">
                             <img src="/img/câmbio.webp" alt="Conversor de Moedas">
                         </a>
                     </div>
