--- a/index.html
+++ b/index.html
@@ -197,21 +197,21 @@
             <div class="card-project">
                 <div class="content-project">
                     <div class="image-project">
-                        <a href="/">
-                            <img src="img/embreve.jpg" alt="img-embreve">
+                        <a href="https://jogodeadvinhacao.netlify.app/">
+                            <img src="/img/Ilustração-cérebro+1.png" alt="img_advinhacao">
                         </a>
                     </div>
 
-                    <span>Em breve, novo projeto!</span>
+                    <span>Jogo de Advinhação!</span>
 
-                    <p>Este projeto ainda não está pronto.</p>
+                    <p>Minigame de advinhação de números, feito em acompanhamento à Imersão em JS da Alura.</p>
 
                     <div class="cta-project">
-                        <a href="/">
+                        <a href="https://github.com/MatheusDarlyson/Advinhar_Numero">
                             Código
                             <i class="fa-brands fa-github"></i>
                         </a>
-                        <a href="/">
+                        <a href="https://jogodeadvinhacao.netlify.app/">
                             Site
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
