adicao de novo projeto

--- a/index.html
+++ b/index.html
@@ -222,21 +222,21 @@
             <div class="card-project">
                 <div class="content-project">
                     <div class="image-project">
-                        <a href="/">
-                            <img src="img/embreve.jpg" alt="img-embreve">
+                        <a href="https://cinelight.netlify.app/">
+                            <img src="/img/CineLight.png" alt="CineLight">
                         </a>
                     </div>
 
-                    <span>Em breve, novo projeto!</span>
+                    <span>Projeto CineLight</span>
 
-                    <p>Este projeto ainda não está pronto.</p>
+                    <p>Mini Catálogo de Filmes, feito na semana de Imersão em Js da Alura.</p>
 
                     <div class="cta-project">
-                        <a href="/">
+                        <a href="https://github.com/MatheusDarlyson/ListaFilmes">
                             Código
                             <i class="fa-brands fa-github"></i>
                         </a>
-                        <a href="/">
+                        <a href="https://cinelight.netlify.app/">
                             Site
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
